# sgm

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
img/: CMakeLists.txt
img/include/img/: core.h  eval.h  fileio.h  median.h  sgm.h
img/src/: eval.cpp  fileio.cpp  median.cpp  sgm.cpp
img/test/: compare_cost_functions.cpp  compare_directions.cpp  test_cost_functions.cpp  testdirections.cpp  testeval.cpp  testfileio.cpp  testmedian.cpp  testsgm.cpp
